# multi-agent-cloud-optimization-recommender

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint-typecheck-test.yml
docs/: agents.md  audit-trail.md  decisions.md  eval-set.md  harnesses.md  mcp-server.md  running.md
eval-set/: README.md  demo_scoring.py
eval-set/expectations/: 07.json  15.json  17.json
eval-set/expectations/01/: raw_recommendation.json
eval-set/expectations/02/: raw_recommendation.json
eval-set/expectations/03/: raw_recommendation.json
eval-set/expectations/04/: raw_recommendation.json
eval-set/expectations/05/: raw_recommendation.json
eval-set/expectations/06/: raw_recommendation.json
eval-set/expectations/07/: raw_recommendation.json
eval-set/expectations/08/: raw_recommendation.json
eval-set/expectations/09/: raw_recommendation.json
eval-set/expectations/10/: raw_recommendation.json
eval-set/expectations/11/: raw_recommendation.json
eval-set/expectations/12/: raw_recommendation.json
eval-set/expectations/13/: raw_recommendation.json
eval-set/expectations/14/: raw_recommendation.json
eval-set/expectations/15/: raw_recommendation.json
eval-set/expectations/16/: raw_recommendation.json
eval-set/expectations/17/: raw_recommendation.json
eval-set/expectations/18/: raw_recommendation.json
eval-set/scoring_rules/: README.md
eval-set/scoring_rules/01/: rules.json
eval-set/scoring_rules/02/: rules.json
eval-set/scoring_rules/03/: rules.json
eval-set/scoring_rules/04/: rules.json
eval-set/scoring_rules/05/: rules.json
eval-set/scoring_rules/06/: rules.json
eval-set/scoring_rules/07/: rules.json
eval-set/scoring_rules/08/: rules.json
eval-set/scoring_rules/09/: rules.json
eval-set/scoring_rules/10/: rules.json
eval-set/scoring_rules/11/: rules.json
eval-set/scoring_rules/12/: rules.json
eval-set/scoring_rules/13/: rules.json
eval-set/scoring_rules/14/: rules.json
eval-set/scoring_rules/15/: rules.json
eval-set/scoring_rules/16/: rules.json
eval-set/scoring_rules/17/: rules.json
eval-set/scoring_rules/18/: rules.json
measurements/: README.md  orchestrated-haiku-haiku-summary.txt  orchestrated-opus-opus-summary.txt  orchestrated-sonnet-haiku-summary.txt  orchestrated-sonnet-sonnet-summary.txt
notebooks/: 01_Architecture_Overview.ipynb  02_Evaluation_and_Results.ipynb  03_Harness_Design_Deep_Dive.ipynb
sample_runs/: README.md
sample_runs/reports/: scenario_02_report.md  scenario_07_report.md  scenario_08_report.md
sample_runs/scenario_02/: raw_recommendation.json
sample_runs/scenario_07/: raw_recommendation.json
sample_runs/scenario_08/: raw_recommendation.json
sample_runs/traces/: scenario_02_trace.json  scenario_02_trace.md  scenario_07_trace.json  scenario_07_trace.md  scenario_08_trace.json  scenario_08_trace.md
scripts/: export_cycle_fixture.py  integration_test_all.sh  langgraph_dev.sh  list_mcp_tools.sh  render_evidence_trace.sh  render_recommendation.sh  run_agents.sh  run_ci_locally.sh  run_demo.sh  run_golden.sh  run_hf_smoke_test.sh  run_integration.sh  run_live_demo.sh  run_mcp_server_test.sh  run_mock_demo.sh  run_pytest.sh  score_recommendation.sh  show_recommendation.sh  verify_evidence_chain.sh  verify_trace.sh
src/: __init__.py
src/agents/: __init__.py  analysis_plan.py  dispatch.py  evaluator.py  llm_client.py  orchestrator.py  replay.py  runner.py  state.py  supervisor.py  system_mapper.py
src/agents/prompts/: __init__.py  compute_analyst.txt  cross_tier_evaluator.txt  data_layer_analyst.txt  network_analyst.txt
src/agents/specialists/: __init__.py  base.py  compute.py  data_layer.py  network.py
src/audit/: composer.py  queries.py  schema.py  store.py
src/common/: config.py  init.py
src/composite/: __init__.py  schema.py
src/evaluator/: __init__.py  correctness_measure.py  enums.py  eval.py  evaluator.py  judge_client.py  mid_measure.py  richness_measure.py  rules.py  scoring_helpers.py  shape_measure.py  tiers.py  types.py
src/evaluator/prompts/: judge_richness.md
src/harnesses/: __init__.py  action.py  input.py  orchestration.py  reasoning.py
src/mcp_server/: _stats.py  scope.py
src/mcp_server/tools/: context.py  scenarios.py  specials.py  telemetry.py
src/models/: __init__.py  audit.py  composite.py  enums.py  scoring.py  telemetry.py
src/renderer/: __init__.py  __main__.py  render_report.py  render_trace.py
tests/: README.md  __init__.py  audit_smoke.py  conftest.py  export_cycle_fixture.py  list_mcp_tools.py  run_all_tests.py  run_replay.py  verify_trace.py
tests/integration/: conftest.py  test_edge_cases.py  test_eval_cli.py  test_eval_set_data.py  test_golden_answers.py  test_mcp_server.py  test_renderer.py
tests/integration/agents/: test_agents_end_to_end.py
tests/integration/agents/fixtures/: README.md  cycle_app08.json
tests/integration/fixtures/mock_predictions/: scenario_08_bad_correctness.json  scenario_08_bad_mid.json  scenario_08_bad_rich.json  scenario_08_low_richness.json  scenario_08_mid_richness.json  scenario_08_thin_structure.json
tests/judge_live/: conftest.py  test_judge_self_validation.py
tests/unit/: conftest.py
tests/unit/agents/: test_orchestrator.py  test_runner.py  test_state.py  test_supervisor.py  test_system_mapper.py
tests/unit/audit/: test_queries.py  test_queries_harness.py  test_store.py  test_store_harness.py
tests/unit/evaluator/: test_correctness_measure.py  test_enums.py  test_evaluator.py  test_mid_measure.py  test_richness_measure.py  test_rules.py  test_shape_measure.py  test_tiers.py
tests/unit/harnesses/: conftest.py  test_action.py  test_input.py  test_reasoning.py
