[project]
name = "multi-agent-cloud-optimization-recommender"
version = "0.1.0"
description = "A multi-agent system that reads cloud telemetry and recommends optimization changes."
authors = [{name = "Alexander Meau"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Loads the published dataset from Hugging Face Hub.
    "huggingface_hub>=0.20.0",

    # LLM client.
    "anthropic>=0.30.0",

    # Persistent audit trail. SQLite ships with stdlib; SQLAlchemy is the ORM.
    "sqlalchemy>=2.0",

    # Used by the System Mapper to parse main.tf into a dependency graph.
    # python-hcl2 reads Terraform's HCL into Python dicts.
    "python-hcl2>=4.0",

    # Pydantic models for review packets, findings, evaluator records.
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
