[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install src/ as a top-level importable package so `python -m src.evaluator.eval`
# works from any working directory after `uv sync`.
packages = ["src"]

[project]
name = "multi-agent-cloud-optimization-recommender"
version = "0.1.0"
description = "A multi-agent system that reads cloud telemetry and recommends optimization changes."
authors = [{name = "Alexander Meau"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Loads the published dataset from Hugging Face Hub.
    "huggingface_hub>=0.20.0",
    # LLM judge clients (provider chosen at runtime via LLM_JUDGE_PROVIDER).
    "anthropic>=0.30.0",
    "openai>=1.40.0",
    # Persistent audit trail. SQLite ships with stdlib; SQLAlchemy is the ORM.
    "sqlalchemy>=2.0",
    # Used by the System Mapper to parse main.tf into a dependency graph.
    # python-hcl2 reads Terraform's HCL into Python dicts.
    "python-hcl2>=4.0",
    # Pydantic models for review packets, findings, evaluator records.
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
# By default, exclude live-judge tests from collection. They cost API
# calls and require ANTHROPIC_API_KEY. Run them explicitly with:
#   pytest tests/judge_live/
testpaths = ["tests/unit", "tests/integration"]
