[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install src/ as a top-level importable package so `python -m src.evaluator.eval`
# works from any working directory after `uv sync`.
packages = ["src"]

[project]
name = "multi-agent-cloud-optimization-recommender"
version = "0.1.0"
description = "A multi-agent system that reads cloud telemetry and recommends optimization changes."
authors = [{name = "Alexander Meau"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Loads the published dataset from Hugging Face Hub.
    "huggingface_hub>=0.20.0",
    # LLM judge clients (provider chosen at runtime via LLM_JUDGE_PROVIDER).
    "anthropic>=0.30.0",
    "openai>=1.40.0",
    # MCP server framework. Pinned exactly because the FastMCP submodule
    # diverges between releases (decorator names, import paths) and a
    # silently-updated SDK would change the wire contract under us.
    # Bumping is a one-line change; commit uv.lock alongside.
    "mcp==1.27.2",
    # Persistent audit trail. SQLite ships with stdlib; SQLAlchemy is the ORM.
    "sqlalchemy>=2.0",
    # Used by the System Mapper to parse main.tf into a dependency graph.
    # python-hcl2 reads Terraform's HCL into Python dicts.
    "python-hcl2>=4.0",
    # Pydantic models for review packets, findings, evaluator records.
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.ruff]
# Targeted only at our code. Skip the vendored HF dataset cache and
# anything ruff can't usefully reach.
exclude = [".hf_cache", ".venv", "__pycache__", ".uv-cache"]

[tool.ruff.lint.per-file-ignores]
# These files MUST manipulate sys.path before importing project modules,
# because they live in folders that aren't on the default path (eval-set/,
# tests/) and need to make `src.*` importable without a prior `pip install -e`.
# E402 (module-level import not at top of file) is a false-positive for this
# legitimate pattern.
"eval-set/demo_scoring.py" = ["E402"]
"tests/integration/conftest.py" = ["E402"]
"tests/list_mcp_tools.py" = ["E402"]

[tool.mypy]
# Enable the Pydantic mypy plugin (ships with pydantic>=2.0; no extra install).
# This lets mypy understand:
#   - Pydantic model construction (Cls(field=value, ...))
#   - Field validators and the typed `__init__` signature
#   - Generic models and inheritance chains (Composite IS-A Recommendation)
# The `model_validate(dict)` pattern works without the plugin too, but the
# plugin gives clearer errors for any future code that builds models via
# named kwargs from helpers whose return shape isn't statically declared.
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
# Defaults are conservative; these are the recommended tightenings.
init_forbid_extra = true      # error if you pass an unknown field at construction
init_typed = true             # __init__ params get the field's type, not Any
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
# By default, exclude live-judge tests from collection. They cost API
# calls and require ANTHROPIC_API_KEY. Run them explicitly with:
#   pytest tests/judge_live/
testpaths = ["tests/unit", "tests/integration"]
